--- a/MNIST/mnist/ExportPara/export_cnn.ipynb
+++ b/MNIST/mnist/ExportPara/export_cnn.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "id": "ad943cca",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "id": "9553134d",
    "metadata": {},
    "outputs": [],
@@ -38,27 +38,27 @@
     "    def __init__(self):\n",
     "        super().__init__() # -> 输入规格：1 x 28 x 28\n",
     "        # 卷积层\n",
-    "        self.conv1 = nn.Conv2d(1, 32, kernel_size=3, padding=1)  # -> 32 x 28 x 28\n",
-    "        self.conv2 = nn.Conv2d(32, 64, kernel_size=3, padding=1) # -> 64 x 28 x 28\n",
+    "        self.conv1 = nn.Conv2d(1, 2, kernel_size=3, padding=1)  # -> 2 x 28 x 28\n",
+    "        self.conv2 = nn.Conv2d(2, 3, kernel_size=3, padding=1)  # -> 3 x 28 x 28\n",
     "        self.pool = nn.MaxPool2d(2, 2)                           # 每次池化尺寸减半\n",
     "        self.dropout = nn.Dropout(0.25)\n",
-    "        self.fc1 = nn.Linear(64 * 7 * 7, 128)\n",
-    "        self.fc2 = nn.Linear(128, 10)\n",
+    "        self.fc1 = nn.Linear(3 * 7 * 7, 16)            # -> 16\n",
+    "        self.fc2 = nn.Linear(16, 10)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = F.relu(self.conv1(x))              # -> (B, 32, 28, 28)\n",
-    "        x = self.pool(F.relu(self.conv2(x)))   # -> (B, 64, 14, 14)\n",
-    "        x = self.pool(x)                       # -> (B, 64, 7, 7)\n",
+    "        x = F.relu(self.conv1(x))              # -> (B, 2, 28, 28)\n",
+    "        x = self.pool(F.relu(self.conv2(x)))   # -> (B, 3, 14, 14)\n",
+    "        x = self.pool(x)                       # -> (B, 3, 7, 7)\n",
     "        x = self.dropout(x)\n",
-    "        x = x.view(x.size(0), -1)              # -> (B, 3136)\n",
-    "        x = F.relu(self.fc1(x))                # -> (B, 128)\n",
+    "        x = x.view(x.size(0), -1)              # -> (B, 2 * 7 * 7)\n",
+    "        x = F.relu(self.fc1(x))                # -> (B, 16)\n",
     "        x = self.fc2(x)                        # -> (B, 10)\n",
     "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
    "id": "eeb15472",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 45,
    "id": "527f3a2b",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
       "Epoch 4 完成\n",
       "Epoch 5 完成\n",
       "\n",
-      "测试准确率：0.9911\n"
+      "测试准确率：0.9601\n"
      ]
     }
    ],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
    "id": "04933218",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "id": "808ae9b8",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
        "'state_dict 本质上是一个 Python其中:\\n键(key):是字符串，表示参数的名称\\n值(value):是 tensor,包含实际的参数数据'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 48,
    "id": "0f992c4b",
    "metadata": {},
    "outputs": [
@@ -230,13 +230,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "conv1.weight: torch.Size([32, 1, 3, 3])\n",
-      "conv1.bias: torch.Size([32])\n",
-      "conv2.weight: torch.Size([64, 32, 3, 3])\n",
-      "conv2.bias: torch.Size([64])\n",
-      "fc1.weight: torch.Size([128, 3136])\n",
-      "fc1.bias: torch.Size([128])\n",
-      "fc2.weight: torch.Size([10, 128])\n",
+      "conv1.weight: torch.Size([2, 1, 3, 3])\n",
+      "conv1.bias: torch.Size([2])\n",
+      "conv2.weight: torch.Size([3, 2, 3, 3])\n",
+      "conv2.bias: torch.Size([3])\n",
+      "fc1.weight: torch.Size([16, 147])\n",
+      "fc1.bias: torch.Size([16])\n",
+      "fc2.weight: torch.Size([10, 16])\n",
       "fc2.bias: torch.Size([10])\n"
      ]
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 49,
    "id": "77e1dc44",
    "metadata": {},
    "outputs": [
@@ -257,13 +257,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "conv1_weight: torch.Size([32, 1, 3, 3])\n",
-      "conv1_bias: torch.Size([32])\n",
-      "conv2_weight: torch.Size([64, 32, 3, 3])\n",
-      "conv2_bias: torch.Size([64])\n",
-      "fc1_weight: torch.Size([128, 3136])\n",
-      "fc1_bias: torch.Size([128])\n",
-      "fc2_weight: torch.Size([10, 128])\n",
+      "conv1_weight: torch.Size([2, 1, 3, 3])\n",
+      "conv1_bias: torch.Size([2])\n",
+      "conv2_weight: torch.Size([3, 2, 3, 3])\n",
+      "conv2_bias: torch.Size([3])\n",
+      "fc1_weight: torch.Size([16, 147])\n",
+      "fc1_bias: torch.Size([16])\n",
+      "fc2_weight: torch.Size([10, 16])\n",
       "fc2_bias: torch.Size([10])\n"
      ]
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 50,
    "id": "df5f3c37",
    "metadata": {},
    "outputs": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 51,
    "id": "729955ab",
    "metadata": {},
    "outputs": [
@@ -355,9 +355,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "参数总数: 421642\n",
-      "文件大小: 1686568 字节\n",
-      "预期大小: 1686568 字节\n",
+      "参数总数: 2615\n",
+      "文件大小: 10460 字节\n",
+      "预期大小: 10460 字节\n",
       "大小是否匹配: True\n"
      ]
     }
