--- a/MNIST/mnist/ExportPara/export_cnn.ipynb
+++ b/MNIST/mnist/ExportPara/export_cnn.ipynb
@@ -12,9 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "id": "ad943cca",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-05-18T05:39:11.478639Z",
+     "iopub.status.busy": "2025-05-18T05:39:11.478361Z",
+     "iopub.status.idle": "2025-05-18T05:39:13.466392Z",
+     "shell.execute_reply": "2025-05-18T05:39:13.465672Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import torch\n",
@@ -28,9 +35,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "id": "9553134d",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-05-18T05:39:13.469115Z",
+     "iopub.status.busy": "2025-05-18T05:39:13.468696Z",
+     "iopub.status.idle": "2025-05-18T05:39:13.472752Z",
+     "shell.execute_reply": "2025-05-18T05:39:13.472254Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# 定义 CNN 模型\n",
@@ -39,28 +53,35 @@
     "        super().__init__() # -> 输入规格：1 x 28 x 28\n",
     "        # 卷积层\n",
     "        self.conv1 = nn.Conv2d(1, 2, kernel_size=3, padding=1)  # -> 2 x 28 x 28\n",
-    "        self.conv2 = nn.Conv2d(2, 3, kernel_size=3, padding=1)  # -> 3 x 28 x 28\n",
+    "        self.conv2 = nn.Conv2d(2, 4, kernel_size=3, padding=1)  # -> 4 x 28 x 28\n",
     "        self.pool = nn.MaxPool2d(2, 2)                           # 每次池化尺寸减半\n",
     "        self.dropout = nn.Dropout(0.25)\n",
-    "        self.fc1 = nn.Linear(3 * 7 * 7, 16)            # -> 16\n",
-    "        self.fc2 = nn.Linear(16, 10)\n",
+    "        self.fc1 = nn.Linear(4 * 7 * 7, 24)            # -> 24\n",
+    "        self.fc2 = nn.Linear(24, 10)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = F.relu(self.conv1(x))              # -> (B, 2, 28, 28)\n",
-    "        x = self.pool(F.relu(self.conv2(x)))   # -> (B, 3, 14, 14)\n",
-    "        x = self.pool(x)                       # -> (B, 3, 7, 7)\n",
+    "        x = self.pool(F.relu(self.conv2(x)))   # -> (B, 4, 14, 14)\n",
+    "        x = self.pool(x)                       # -> (B, 4, 7, 7)\n",
     "        x = self.dropout(x)\n",
-    "        x = x.view(x.size(0), -1)              # -> (B, 2 * 7 * 7)\n",
-    "        x = F.relu(self.fc1(x))                # -> (B, 16)\n",
+    "        x = x.view(x.size(0), -1)              # -> (B, 4 * 7 * 7)\n",
+    "        x = F.relu(self.fc1(x))                # -> (B, 24)\n",
     "        x = self.fc2(x)                        # -> (B, 10)\n",
     "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "id": "eeb15472",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-05-18T05:39:13.474445Z",
+     "iopub.status.busy": "2025-05-18T05:39:13.474171Z",
+     "iopub.status.idle": "2025-05-18T05:39:13.818171Z",
+     "shell.execute_reply": "2025-05-18T05:39:13.817639Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# 数据预处理\n",
@@ -88,21 +109,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "id": "527f3a2b",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-05-18T05:39:13.820217Z",
+     "iopub.status.busy": "2025-05-18T05:39:13.819910Z",
+     "iopub.status.idle": "2025-05-18T05:39:57.221880Z",
+     "shell.execute_reply": "2025-05-18T05:39:57.221214Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1 完成\n",
-      "Epoch 2 完成\n",
-      "Epoch 3 完成\n",
-      "Epoch 4 完成\n",
-      "Epoch 5 完成\n",
+      "Epoch 1 完成\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2 完成\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3 完成\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4 完成\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5 完成\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
-      "测试准确率：0.9601\n"
+      "测试准确率：0.9737\n"
      ]
     }
    ],
@@ -144,9 +202,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "id": "04933218",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-05-18T05:39:57.223812Z",
+     "iopub.status.busy": "2025-05-18T05:39:57.223647Z",
+     "iopub.status.idle": "2025-05-18T05:39:57.503604Z",
+     "shell.execute_reply": "2025-05-18T05:39:57.502797Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -188,9 +253,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "id": "808ae9b8",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-05-18T05:39:57.506383Z",
+     "iopub.status.busy": "2025-05-18T05:39:57.505997Z",
+     "iopub.status.idle": "2025-05-18T05:39:57.510951Z",
+     "shell.execute_reply": "2025-05-18T05:39:57.510451Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -205,7 +277,7 @@
        "'state_dict 本质上是一个 Python其中:\\n键(key):是字符串，表示参数的名称\\n值(value):是 tensor,包含实际的参数数据'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,9 +294,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "id": "0f992c4b",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-05-18T05:39:57.513015Z",
+     "iopub.status.busy": "2025-05-18T05:39:57.512619Z",
+     "iopub.status.idle": "2025-05-18T05:39:57.516367Z",
+     "shell.execute_reply": "2025-05-18T05:39:57.515697Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -232,11 +311,11 @@
      "text": [
       "conv1.weight: torch.Size([2, 1, 3, 3])\n",
       "conv1.bias: torch.Size([2])\n",
-      "conv2.weight: torch.Size([3, 2, 3, 3])\n",
-      "conv2.bias: torch.Size([3])\n",
-      "fc1.weight: torch.Size([16, 147])\n",
-      "fc1.bias: torch.Size([16])\n",
-      "fc2.weight: torch.Size([10, 16])\n",
+      "conv2.weight: torch.Size([4, 2, 3, 3])\n",
+      "conv2.bias: torch.Size([4])\n",
+      "fc1.weight: torch.Size([24, 196])\n",
+      "fc1.bias: torch.Size([24])\n",
+      "fc2.weight: torch.Size([10, 24])\n",
       "fc2.bias: torch.Size([10])\n"
      ]
     }
@@ -249,9 +328,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "id": "77e1dc44",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-05-18T05:39:57.517962Z",
+     "iopub.status.busy": "2025-05-18T05:39:57.517808Z",
+     "iopub.status.idle": "2025-05-18T05:39:57.522023Z",
+     "shell.execute_reply": "2025-05-18T05:39:57.521236Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -259,11 +345,11 @@
      "text": [
       "conv1_weight: torch.Size([2, 1, 3, 3])\n",
       "conv1_bias: torch.Size([2])\n",
-      "conv2_weight: torch.Size([3, 2, 3, 3])\n",
-      "conv2_bias: torch.Size([3])\n",
-      "fc1_weight: torch.Size([16, 147])\n",
-      "fc1_bias: torch.Size([16])\n",
-      "fc2_weight: torch.Size([10, 16])\n",
+      "conv2_weight: torch.Size([4, 2, 3, 3])\n",
+      "conv2_bias: torch.Size([4])\n",
+      "fc1_weight: torch.Size([24, 196])\n",
+      "fc1_bias: torch.Size([24])\n",
+      "fc2_weight: torch.Size([10, 24])\n",
       "fc2_bias: torch.Size([10])\n"
      ]
     }
@@ -292,9 +378,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "id": "df5f3c37",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-05-18T05:39:57.524005Z",
+     "iopub.status.busy": "2025-05-18T05:39:57.523681Z",
+     "iopub.status.idle": "2025-05-18T05:39:57.530960Z",
+     "shell.execute_reply": "2025-05-18T05:39:57.529983Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -347,17 +440,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "id": "729955ab",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-05-18T05:39:57.532836Z",
+     "iopub.status.busy": "2025-05-18T05:39:57.532657Z",
+     "iopub.status.idle": "2025-05-18T05:39:57.536547Z",
+     "shell.execute_reply": "2025-05-18T05:39:57.535950Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "参数总数: 2615\n",
-      "文件大小: 10460 字节\n",
-      "预期大小: 10460 字节\n",
+      "参数总数: 5074\n",
+      "文件大小: 20296 字节\n",
+      "预期大小: 20296 字节\n",
       "大小是否匹配: True\n"
      ]
     }
